<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/com_facebook_likeboxcountview_border_color"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016">

        <TextView
            android:id="@+id/className"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:paddingLeft="8dp"
            android:text="class name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/classStatus"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="status"
            android:textStyle="italic"
            android:gravity="right"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            tools:paddingRight="16dp" />
    </LinearLayout>
</LinearLayout>